--- a/package.json
+++ b/package.json
@@ -1,31 +1,36 @@
 {
-	"name": "vscode-PSStackoverflow",
-	"description": "Extension to search stackoverflow for selected text and powershell",
-	"version": "0.0.1",
-	"publisher": "Doug Finke",
-	"engines": {
-		"vscode": "^0.10.1"
-	},
-	"categories": [
-		"Other"
-	],
-	"activationEvents": [
-		"onCommand:PowerShell.SearchSO"
-	],
-	"main": "./out/src/extension",
-	"contributes": {
-		"commands": [{
-			"command": "PowerShell.SearchSO",
-			"title": "Search Stackoverflow with PowerShell Tag",
-			"category": "PowerShell"
-		}]
-	},
-	"scripts": {
-		"vscode:prepublish": "node ./node_modules/vscode/bin/compile",
-		"compile": "node ./node_modules/vscode/bin/compile -watch -p ./"
-	},
-	"devDependencies": {
-		"typescript": "^1.6.2",
-		"vscode": "0.10.x"
-	}
+  "name": "vscode-PSStackoverflow",
+  "description": "Extension to search stackoverflow for selected text and powershell",
+  "version": "0.0.1",
+  "publisher": "Doug Finke",
+  "engines": {
+    "vscode": "^0.10.1"
+  },
+  "categories": [
+    "Other"
+  ],
+  "activationEvents": [
+    "onCommand:PowerShell.SearchSO"
+  ],
+  "main": "./out/src/extension",
+  "contributes": {
+    "commands": [
+      {
+        "command": "PowerShell.SearchSO",
+        "title": "Search Stackoverflow with PowerShell Tag",
+        "category": "PowerShell"
+      }
+    ]
+  },
+  "scripts": {
+    "vscode:prepublish": "node ./node_modules/vscode/bin/compile",
+    "compile": "node ./node_modules/vscode/bin/compile -watch -p ./"
+  },
+  "devDependencies": {
+    "typescript": "^1.6.2",
+    "vscode": "0.10.x"
+  },
+  "dependencies": {
+    "open": "0.0.5"
+  }
 }
