--- a/package.json
+++ b/package.json
@@ -14,6 +14,13 @@
   ],
   "main": "./out/src/extension",
   "contributes": {
+    "keybindings": [
+      {
+        "command": "PowerShell.SearchSO",
+        "key": "ctrl+shift+f1",
+        "when": "editorTextFocus && editorLangId == 'powershell'"
+      }
+    ],
     "commands": [
       {
         "command": "PowerShell.SearchSO",
